change img size

--- a/index.html
+++ b/index.html
@@ -24,9 +24,9 @@
                                 Gotovtseva
                             </div>
                         </div>
-                        <div class="layer layers__bg" style="background-image: url(/assets/img/bg+art.png);"></div>
-                        <div class="layer layers__middle" style="background-image: url(/assets/img/monstera_middle.png);"></div>
-                        <div class="layer layers__front" style="background-image: url(/assets/img/monstera_front_L.png);"></div>
+                        <div class="layer layers__bg" style="background-image: url(/assets/img/bg.png);"></div>
+                        <div class="layer layers__middle" style="background-image: url(/assets/img/middle.png);"></div>
+                        <div class="layer layers__front" style="background-image: url(/assets/img/front.png);"></div>
                     </div>
                 </div>
                 <div class="section-after-parallax">
